<resources>
    <string name="DEV_KEY">AIzaSyBd9lbrJaky_AkV4bQ1HvlMREvlWn2TYy</string>
    <string name="PLAYLIST_ID">PLmriyx1tVZAxrakJC0E7itgNgImXt6SMp</string>
    <string name="app_name">GoMudik</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="medium_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
    </string>
    <string name="short_text">
         "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    </string>
    <string name="error_loading">Error loading, please try again later</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="places">Places</string>
    <string name="cctv">CCTV</string>
    <string name="Chat">Chat</string>
    <string name="home">Home</string>
    <string name="salat">Salat</string>
    <string name="news">News</string>
    <string name="live">Live</string>
    <string name="cnn_tv">CNN TV</string>
    <string name="imsak">Imsak</string>
    <string name="subuh">Subuh</string>
    <string name="dzuhur">Zuhur</string>
    <string name="ashar">Asar</string>
    <string name="maghrib">Magrib</string>
    <string name="isya">Isya</string>
    <string name="search_location">Enter Address, City, or Zip Code</string>
    <string name="please_wait">Please Wait</string>
    <string name="space_ads">Space for Ads</string>
    <string name="latest_news">Latest News: </string>
    <string name="example_news">Kemacetan Panjang di Brexit Tol disebabkan karena adanya antrian kendaraan yang menumpuk</string>
    <string name="loading_map">Loading map...</string>
    <string name="explore_nearby">Explore nearby</string>
    <string name="police_station">Polsek/Polres</string>
    <string name="hospital">Rumah Sakit/Klinik</string>
    <string name="gas_station">SPBU</string>
    <string name="terminal">Terminal</string>
    <string name="bank_mega">Bank Mega</string>
    <string name="stasiun">Stasiun</string>
    <string name="bengkel_mobil">Bengkel Mobil</string>
    <string name="bengkel_motor">Bengkel Motor</string>
    <string name="atm">ATM</string>
    <string name="masjid">Masjid</string>
    <string name="rest_area">Rest Area</string>
    <string name="posko">Posko Mudik</string>
    <string name="category">Category</string>
    <string name="more">More</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="loading">Please wait</string>
    <string name="loading_dialog">Loading…</string>
    <string name="new_group">New group</string>
    <string name="new_contact">New contact</string>
    <string name="status">Status</string>
    <string name="status_desc">Latest 5 status about their mudik</string>
    <string name="gomudik_news">GoMudik News</string>
    <string name="gomudik_news_desc">Latest 5 videos from our youtube channel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_contact">ListContactActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Full Name</string>
    <string name="action_invite">Invite</string>
    <string name="action_add_user">Add friend</string>
    <string name="action_next">Next</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_send_email">Send Email</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="group_chat_null">There is no group chat</string>
    <string name="group_chat_null_desc">"You don't have any group chat. Click 'Create Group' button to create your group and start to chat."</string>
    <string name="list_friend_null">There is no friend</string>
    <string name="list_friend_null_desc">"You don't have any friend on your contact. Click 'Add Friend' button to add some friends."</string>
    <string name="list_group_friend_null">There is no group or friend</string>
    <string name="list_group_friend_null_desc">"You don't have any friend or group on your contact. Click 'Add Friend' button to add some friends."</string>
    <string name="status_null">There is no status</string>
    <string name="menu_gomudik_news_title_error">Failed to get video from Youtube</string>
    <string name="menu_gomudik_news_detail_error">Something wrong about our playlist. We are sorry for the inconvenience.</string>
</resources>