<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/gomudik_news"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    android:background="@color/colorPrimaryLite"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/text_gomudik_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/gomudik_news"
            android:textSize="17sp"
            android:paddingBottom="2dp"/>
        <TextView
            android:id="@+id/subdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc"
            android:text="@string/gomudik_news_desc"
            android:paddingBottom="5dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">
            <ImageButton
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:background="@drawable/select_border"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/cage_gomudik_news_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_gomudik_news"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/cage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/dotsLayout"
            android:layout_below="@id/cage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/cage_template_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:layout_below="@id/text_gomudik_news">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/image_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_video_library_red_50dp"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/text_error"
                android:layout_toEndOf="@id/image_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/menu_gomudik_news_title_error"/>
            <TextView
                android:id="@+id/detail_error"
                android:layout_below="@id/text_error"
                android:layout_toEndOf="@id/image_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_gomudik_news_detail_error"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>