<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/white_border"
    app:behavior_hideable="true"
    app:layout_insetEdge="bottom"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLite">
        <RelativeLayout
            android:id="@+id/nearbyTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white">
            <TextView
                android:id="@+id/bottomSheet_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/explore_nearby"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/iconMenu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:baselineAligned="false"
            android:paddingTop="5dp"
            android:layout_below="@id/nearbyTitle"
            android:paddingBottom="10dp"
            android:background="@color/white">
            <RelativeLayout
                android:id="@+id/button_police"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/select_border">
                <RelativeLayout
                    android:id="@+id/cage_police_station"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_button_cancel"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_polisi"
                        android:layout_centerInParent="true"
                        tools:ignore="contentDescription"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/cage_police_station"
                    android:text="@string/police_station"
                    android:layout_marginTop="3dp"
                    android:textSize="10sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/button_hospital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/select_border">
                <RelativeLayout
                    android:id="@+id/cage_hospital"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_button_cancel"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_rs"
                        android:layout_centerInParent="true"
                        tools:ignore="contentDescription"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/cage_hospital"
                    android:text="@string/hospital"
                    android:layout_marginTop="3dp"
                    android:textSize="10sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/button_gas_station"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/select_border">
                <RelativeLayout
                    android:id="@+id/cage_gas_station"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_button_cancel"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:id="@+id/img_button_gas_station"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_spbu"
                        android:layout_centerInParent="true"
                        tools:ignore="contentDescription"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/cage_gas_station"
                    android:text="@string/gas_station"
                    android:layout_marginTop="3dp"
                    android:textSize="10sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/button_more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/select_border">
                <RelativeLayout
                    android:id="@+id/cage_more"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_button_cancel"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_more_horiz_white_24dp"
                        android:layout_centerInParent="true"
                        tools:ignore="contentDescription"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/cage_more"
                    android:text="@string/more"
                    android:layout_marginTop="3dp"
                    android:textSize="10sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>